Lab5 add aug ext

--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
     console.log('Лабораторно-практична робота №5');
     var dfht = '<div class="content01-div">'
       +   '<a href="https://colab.research.google.com/drive/1FxIzzmVH_U9ZOY2L5ETS0AqIZ879LNq3?usp=sharing">Лекція</a> | '
-      +   '<a href="https://colab.research.google.com/drive/10lmudekb86CN535e7kzFOmYuj4e7v0Uv?usp=sharing">Завдання</a><br/>'
+      +   '<a href="https://colab.research.google.com/drive/10lmudekb86CN535e7kzFOmYuj4e7v0Uv?usp=sharing">Завдання</a> | '
+      +   '<a href="https://colab.research.google.com/drive/1HTjJzO0oajKIdIynXDMjfWgDh7ZCTwhn?usp=sharing">КР AUG</a><br/>'
       +   '<hr/>'
       +   'Зробіть фото для класифікації власноруч відповідно до завдання'
       + '</div>';
