--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       case 2: v += 'Мама -> Тато<br>Сестра -> ?'; break;
       case 3: v += 'Студент -> Успішність<br>Призовник -> ?'; break;
       case 4: v += 'Південь -> Північ<br>Захід -> ?'; break;
-      case 5: v += 'Стопка -> Горілка<br>Філіжанка -> ?'; break;
+      case 5: v += 'Горілка -> Стопка<br>Філіжанка -> ?'; break;
       case 6: v += 'Мир -> Добробут<br>Життя -> ?'; break;
       case 7: v += 'Знання -> Неуцтво<br>Наполегливість -> ?'; break;
       case 8: v += 'Сміх -> Щастя<br>Сльози -> ?'; break;
